syntax = "proto3";

import "cloud/filestore/public/api/protos/data.proto";

package NCloud.NFileStore.NProto;

message TQueueEntry
{
     oneof Request {
          TCreateHandleRequest CreateHandleRequest = 101;
          TDestroyHandleRequest DestroyHandleRequest = 102;
    }
}
